fixed navbar z-index and tilted the about me title to the left

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ img.w-100.rounded-pill {
 
 /* Define the navbar animation */
 .navbar {
+    z-index: 1100;
     opacity: 0;
     transform: translateY(-50px);
     animation: slideInDown 1s forwards;
